// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination rtl render component should be rendered correctly in RTL direction 1`] = `
<ul
  class="ant-pagination ant-pagination-rtl osui-pagination"
  unselectable="unselectable"
>
  <li
    aria-disabled="true"
    class="ant-pagination-prev ant-pagination-disabled"
    title="Previous Page"
  >
    <svg
      class="osui-icon "
      disabled=""
      focusable="false"
      height="1024"
      viewBox="0 0 1024 1024"
      width="1024"
    >
      <path
        d="M693.775 830.447c13.633 14.996 13.633 39.31 0 54.306-13.632 14.996-35.736 14.996-49.369 0l-314.181-345.6c-13.633-14.996-13.633-39.31 0-54.306l314.181-345.6c13.633-14.996 35.737-14.996 49.37 0 13.632 14.996 13.632 39.31 0 54.306L404.277 512l289.497 318.447z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-0 ant-pagination-disabled ant-pagination-item-disabled"
    tabindex="0"
    title="0"
  >
    <a
      rel="nofollow"
    >
      0
    </a>
  </li>
  <li
    aria-disabled="true"
    class="ant-pagination-next ant-pagination-disabled"
    title="Next Page"
  >
    <svg
      class="osui-icon "
      disabled=""
      focusable="false"
      height="1024"
      viewBox="0 0 1024 1024"
      width="1024"
    >
      <path
        d="M330.225 830.447c-13.633 14.996-13.633 39.31 0 54.306 13.632 14.996 35.736 14.996 49.369 0l314.181-345.6c13.633-14.996 13.633-39.31 0-54.306l-314.181-345.6c-13.633-14.996-35.737-14.996-49.37 0-13.632 14.996-13.632 39.31 0 54.306L619.723 512 330.225 830.447z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </li>
</ul>
`;

exports[`Pagination should be rendered correctly in RTL 1`] = `
<ul
  class="ant-pagination ant-pagination-rtl osui-pagination"
  unselectable="unselectable"
>
  <li
    aria-disabled="true"
    class="ant-pagination-prev ant-pagination-disabled"
    title="Previous Page"
  >
    <svg
      class="osui-icon "
      disabled=""
      focusable="false"
      height="1024"
      viewBox="0 0 1024 1024"
      width="1024"
    >
      <path
        d="M693.775 830.447c13.633 14.996 13.633 39.31 0 54.306-13.632 14.996-35.736 14.996-49.369 0l-314.181-345.6c-13.633-14.996-13.633-39.31 0-54.306l314.181-345.6c13.633-14.996 35.737-14.996 49.37 0 13.632 14.996 13.632 39.31 0 54.306L404.277 512l289.497 318.447z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    tabindex="0"
    title="1"
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a
      rel="nofollow"
    >
      2
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <a
      rel="nofollow"
    >
      3
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a
      rel="nofollow"
    >
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <a
      rel="nofollow"
    >
      5
    </a>
  </li>
  <li
    aria-disabled="false"
    class="ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <svg
      class="osui-icon "
      focusable="false"
      height="1024"
      viewBox="0 0 1024 1024"
      width="1024"
    >
      <path
        d="M330.225 830.447c-13.633 14.996-13.633 39.31 0 54.306 13.632 14.996 35.736 14.996 49.369 0l314.181-345.6c13.633-14.996 13.633-39.31 0-54.306l-314.181-345.6c-13.633-14.996-35.737-14.996-49.37 0-13.632 14.996-13.632 39.31 0 54.306L619.723 512 330.225 830.447z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </li>
</ul>
`;
